[package]
name = "towerview"
version = "0.1.0"
authors = ["Sequal32 <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
attohttpc = { version = "0.17", features = ["json"] }
dns-lookup = "1.0"
winping = "0.10"
fsdparser = { git = "https://github.com/Sequal32/vatsimfsdparser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.10"
log = "0.4"
